# tmuxx

./: .dippy  .gitignore  .mopc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  IDEAS.md  LICENSE  README.md  TODO-MENU.md  TODO.md  config.example.toml
.agent/workflows/: commit.md
.claude/diary/: 2026-01-23-11-11-767a7006.md  2026-01-23-19-30-5e97e687.md  2026-01-23-20-30-a0086eeb.md  2026-01-23-22-45-6da926e0.md  2026-01-24-12-01-9c0719cb-8223-4269-a831-5e2c701a4285.md  2026-01-24-15-30-e3ef5961.md  2026-01-25-10-03-6e280dd8.md  2026-01-29-10-30-b182d682.md
.claude/plans/: woolly-foraging-rainbow.md
.claude/skills/: tmuxcc-changelog.md  tmuxcc-commit.md
.dots/: config  tmuxx-action-menu-vars-e5d16b83.md  tmuxx-external-todo-generator-15fe4a55.md  tmuxx-external-todo-generator-9619caee.md  tmuxx-focus-outside-tmux-3f786aa1.md  tmuxx-global-highlight-rules-95f0eae2.md  tmuxx-global-highlight-rules-f4d5842b.md  tmuxx-session-collapse-cc900926.md
.dots/archive/: tmuxx-action-menu-vars-e5d16b83.md  tmuxx-external-todo-generator-15fe4a55.md  tmuxx-global-highlight-rules-f4d5842b.md
.github/workflows/: release.yml
.pi/diary/: 2026-01-27-08-45-tmuxx-kill-session-impl.md  2026-01-27-16-00-pi-powerline-fix.md  2026-01-27-21-30-FINAL-DETECTION-FIXES.md  2026-01-27-21-55-SELECTION-FIX.md  (+3 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/plans/: menu.md  (+1 more)
scripts/: cp-bin.sh  reload-test.sh  setup-multi-test.sh  start-test-session.sh  tmuxcc-wrapper.sh  tmuxx-wrapper.sh
src/: lib.rs  main.rs
tests/: README.md  capture.sh
(+191 files in other folders)
