[package]
name = "tmuxx"
version = "0.3.0"
edition = "2021"
description = "Tmux config driven dashboard with native support for CLI AI Agents (TmuxCC rewritten)"
authors = ["Michael Heca <michael@heca.cz>", "Original TmuxCC Contributors"]
license = "MIT"
repository = "https://github.com/orgoj/tmuxx"
homepage = "https://github.com/orgoj/tmuxx"
readme = "README.md"
keywords = ["tmux", "dashboard", "cli", "terminal", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
dirs = "5"
parking_lot = "0.12"
unicode-width = "0.1"
sysinfo = "0.32"
libc = "0.2"
glob = "0.3"
tui-textarea = "0.7"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
